Relative Routes (for domain)

--- a/update.html
+++ b/update.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modificar Actividades</title>
-    <link rel="stylesheet" href="http://localhost/actividad4js/assets/css/styles.css">
-    <script src="http://localhost/actividad4js/assets/js/read.js" defer></script>
-    <script src="http://localhost/actividad4js/assets/js/update.js" defer></script>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="assets/js/read.js" defer></script>
+    <script src="assets/js/update.js" defer></script>
 </head>
 
 <body>
